# POLYGOD

./: .clinerules  .dockerignore  .editorconfig  .env.example  .gitignore  .instructions.md  .pre-commit-config.yaml  AGENTS.md  AGENT_NOTES.md  CLINE_BUILD.md  DEVELOPMENT.md  Dockerfile.backend  Dockerfile.frontend  INSTRUCTIONS_POLYGOD_GRAFT.md  INSTRUCTIONS_RAG_GOD_GRAFT.md  Makefile  README.md  SECURITY_AUDIT_REPORT.md  alembic.ini  analyze_drive.py  conftest.py  docker-compose.prod.yml  docker-compose.yml  docker-compose_prod.yml  docker-entrypoint.sh  docker_nginx_default.conf  organize_media.py  organize_movies.py  pyproject.toml  setup.py  start_local.sh
.agent/skills/backend-expert/: SKILL.md
.agent/skills/backend-expert/references/: news_api.md  polymarket_api.md
.agent/skills/frontend-expert/: SKILL.md
.github/workflows/: god-tier-deploy.yml
.kilo/: kilo.json
.kilo/plans/: 1775439512053-happy-moon.md  1775447175026-brave-rocket.md
AUDIT_EXPORTS/: backend_audit_2026-04-12.txt  backend_audit_2026-04-13.txt  backend_audit_2026-04-14.txt  backend_audit_2026-04-14_updated.txt  backend_audit_2026-04-15.txt  backend_audit_2026-04-16.txt  backend_audit_2026-04-17.txt  backend_audit_2026-04-20.txt  backend_audit_2026-04-21.txt  backend_audit_2026-04-21_v2.txt  backend_audit_2026-04-22.txt  generate_audit_export.md
SNAPSHOTS/: backend_snapshot_2026-04-10.txt  take_snapshot.md
alembic/: env.py
alembic/migrations/: env.py
alembic/versions/: 0001_initial.py  0001_initial_core_tables.py  dbc2682d86a0_add_trades_table_for_live_fill_streaming.py
docker/prometheus/: prometheus.yml
docs/: AUDIT_SUMMARY.md  POLYGOD_USER_MANUAL.md
migrations/: env.py  timezone_aware_datetimes.sql
qdrant_storage/: raft_state.json
scripts/: derive_polymarket_creds.py  start.sh
src/: test_import.py
src/backend/: auth.py  autoresearch_lab.py  cache.py  config.py  database.py  db_models.py  llm_router.py  main.py  niche_scanner.py  parallel_tournament.py  polygod_graph.py  rag_god_graph.py  self_improving_memory_loop.py  snapshot_engine.py  whale_copy_rag.py
src/backend/agents/: debate.py  mempalace_bridge.py  polygod_brain.py  self_healing.py  skill_loader.py  skill_packager.py  system_admin.py  thought_stream.py
src/backend/mcp/: __init__.py  playwright_client.py
src/backend/middleware/: __init__.py  auth.py  rate_limit.py  security_headers.py
src/backend/models/: __init__.py  llm.py
src/backend/news/: aggregator.py  schemas.py
src/backend/polymarket/: client.py  polymarket_client.py  schemas.py
src/backend/routes/: agent.py  debate.py  llm.py  markets.py  news.py  telegram.py  users.py
src/backend/services/: __init__.py  llm_concierge.py
src/backend/skills/: SKILLS_INDEX.md  alert_rules.md  alert_rules.py  emergency_playbook.md  fix_python.md  fix_ui.md  market_intelligence.md  memory.md  playwright.md  self_heal.md  system_admin.md  trade_journal.md
src/backend/skills_new/analyse_market/: SKILL.md  _meta.json
src/backend/skills_new/analyse_market/scripts/: package_skill.py  validate_skill.py
src/backend/skills_new/backtest/: SKILL.md  _meta.json
src/backend/skills_new/backtest/scripts/: package_skill.py  validate_skill.py
src/backend/skills_new/filesystem_mcp/: SKILL.md  _meta.json
src/backend/skills_new/filesystem_mcp/scripts/: package_skill.py  validate_skill.py
src/backend/skills_new/fix_db/: SKILL.md  _meta.json
src/backend/skills_new/fix_db/scripts/: package_skill.py  validate_skill.py
src/backend/skills_new/fix_docker/: SKILL.md  _meta.json
src/backend/skills_new/fix_docker/scripts/: package_skill.py  validate_skill.py
src/backend/skills_new/fix_python/: SKILL.md  _meta.json
src/backend/skills_new/fix_python/scripts/: package_skill.py  validate_skill.py
src/backend/skills_new/fix_ui/: SKILL.md  _meta.json
src/backend/skills_new/fix_ui/scripts/: package_skill.py  validate_skill.py
src/backend/skills_new/github_mcp/: SKILL.md  _meta.json
src/backend/skills_new/github_mcp/scripts/: package_skill.py  validate_skill.py
src/backend/skills_new/llm_manager/: SKILL.md  _meta.json
src/backend/skills_new/llm_manager/scripts/: package_skill.py  validate_skill.py
src/backend/skills_new/memory/: SKILL.md  _meta.json
src/backend/skills_new/playwright/: SKILL.md  _meta.json
src/backend/strategies/: micro_niche_strategy.py
src/backend/tasks/: update_markets.py
src/backend/tools/: __init__.py  kronos_polydata.py  x_sentiment.py
src/backend/utils/: polymarket_helpers.py
src/frontend/: index.html  package-lock 2.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/frontend/hooks/: useLiveTradesWS.ts  usePolyGodWS.ts
src/frontend/src/: App.tsx  main.tsx  store.ts
src/frontend/src/__tests__/: editModeStore.test.ts  setup.ts  usePolyGodWS.test.ts
src/frontend/src/components/: AgentRow.tsx  AgentWidget.tsx  DebateFloor.tsx  DiffViewer.tsx  EditableLayout.tsx  HamburgerMenu.tsx  KronosForecastCard.tsx  LLMHub.tsx  LLMProviderCard.tsx  LiveTradesFeed.tsx  MarketList.tsx  NewsFeed.tsx  NotificationCentre.tsx  PriceChart.tsx  PriceMovement.tsx  SearchBar.tsx  SettingsButton.tsx  SettingsScreen.tsx  SpotlightSearch.tsx  StyleSidebar.tsx  SystemStatusPanel.tsx  ThinkingWindow.tsx  TickerBanner.tsx  TimeframeSelector.tsx  TopHolders.tsx  TradingViewChart.tsx  UserDashboard.tsx  WhaleList.tsx  WidgetErrorBoundary.tsx
src/frontend/src/hooks/: useKronosWS.ts  useLLM.ts  useLongPress.ts  useMarkets.ts  useNews.ts  usePolyGodWS.ts  usePriceHistory.ts  useRAGGodWS.ts  useUserAnalytics.ts  useWhales.ts
src/frontend/src/stores/: editModeStore.ts  llmStore.ts  marketStore.ts
src/frontend/src/styles/: globals.css
src/frontend/src/utils/: formatters.ts  userTags.ts
tests/: test_auth.py  test_markets.py  test_polygod.py
tests/backend/: conftest.py  test_2026_04_15_fixes.py  test_api.py  test_backtest.py  test_config.py  test_db_models.py  test_kronos.py  test_markets_route.py  test_monte_carlo_fix.py  test_risk_gate.py
tests/security/: test_injection.py
(+4 files in other folders)
