[project]
name = "polygod"
version = "0.1.0"
description = "Real-time market tracking dashboard for Polymarket with TradingView charts and live news feeds"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.0.0",
    "apscheduler>=3.11.0",
    "python-dotenv>=1.0.0",
    "py-clob-client>=0.34.5",
    # "polymarket-agent-skills @ git+https://github.com/Polymarket/agent-skills.git",  # Temporarily disabled due to build issues
    "langchain>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.7",
    "tavily-python>=0.7.19",
    "qdrant-client>=1.12.0",
    "mem0>=0.1.0",
    "prometheus-fastapi-instrumentator>=0.4.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langsmith>=0.3.0",
    "litellm>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=0.8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "alembic",
    "black",
    "ipython",
    "mypy",
    "pre-commit",
    "pytest-cov",
    "ruff>=0.14.14",
]
