# pyproject.toml — additions only (merge these into your existing file)
#
# 1. Add `anyio` to test deps (required by pytest-asyncio with asyncio mode=auto)
# 2. Correct the pytest asyncio_mode setting
# 3. Add coverage config
#
# DIFF vs current pyproject.toml:
# ─────────────────────────────────────────────────────────────────────────────

# [project.optional-dependencies]
# test = [
#     "pytest>=8.0",
#     "pytest-asyncio>=0.23",
#     "pytest-cov>=5.0",
#     "httpx>=0.27",
#     "respx>=0.21",
#     "faker>=24.0",
#     "anyio>=4.0",                  # ← ADD: required by pytest-asyncio
#     "prometheus-fastapi-instrumentator>=0.4.0",
# ]

# [tool.pytest.ini_options]
# asyncio_mode = "auto"
# testpaths = ["tests"]
# addopts = "--tb=short"

# [tool.coverage.run]
# source = ["src/backend"]
# omit = ["*/migrations/*", "*/alembic/*", "*/tests/*"]

# [tool.coverage.report]
# show_missing = true
# skip_covered = false
# fail_under = 60      # raise bar as coverage grows

# ─────────────────────────────────────────────────────────────────────────────
# COMPLETE REPLACEMENT pyproject.toml follows:
# ─────────────────────────────────────────────────────────────────────────────

[project]
name = "polygod"
version = "0.2.0"
description = "Real-time market tracking dashboard for Polymarket with TradingView charts and live news feeds"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.0.0",
    "apscheduler>=3.11.0",
    "python-dotenv>=1.0.0",
    "py-clob-client>=0.34.5",
    "langchain>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-xai>=0.1.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.7",
    "tavily-python>=0.7.19",
    "qdrant-client>=1.12.0",
    "prometheus-fastapi-instrumentator>=0.4.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langsmith>=0.3.0",
    "litellm>=1.60.0",
    "gitpython>=3.1.0",
    "mem0ai>=0.1.0",
    "mempalace>=3.1.0",
    "chromadb>=0.4.0",
    "llama-index-core>=0.12.0",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "cryptography>=44.0.0",
    "slowapi>=0.1.9",
    "aiobreaker>=1.0",
    "redis>=5.2.0",
    "psutil>=5.9.0",
    "langchain-core>=0.3.20",
    "python-telegram-bot>=21.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # ADDED: was used in main.py but missing from deps
    "structlog>=25.0.0",
    # ADDED: MCP client for Playwright browser automation
    "mcp>=1.0.0",
    # ADDED: Kronos/Chronos-T5 time-series forecasting + HF streaming
    "polars>=1.22.0",
    "datasets>=3.0.0",
    "huggingface_hub>=0.28.0",
    "chronos-forecasting>=1.4.0",
    "pyarrow>=16.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=0.8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "respx>=0.21",
    "faker>=24.0",
    "anyio>=4.0",
    "prometheus-fastapi-instrumentator>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/backend"]
omit = [
    "*/alembic/*",
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60

[dependency-groups]
dev = [
    "alembic",
    "black",
    "ipython",
    "mypy",
    "pre-commit",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "ruff>=0.14.14",
    "structlog",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
packages = ["backend"]
